--- a/package.json
+++ b/package.json
@@ -13,19 +13,17 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.304.0",
     "bcrypt": "^5.1.0",
-    "connect-mongo": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
-    "express-session": "^1.17.3",
-    "express-static-gzip": "^2.1.7",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.0.3",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0",
+    "passport-jwt": "^4.0.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
